--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h2>Welcome</h2>
   <p>This is a demo gym website.</p>
 </section>
-
+<div id="gym-chat"></div>
 <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
 	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
