--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
   <h2>Welcome</h2>
   <p>This is a demo gym website.</p>
 </section>
-<div id="gym-chat"></div>
+
 <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
 	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
 	createChat({
 		webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat'
+	    mode: 'window',
+        position: 'bottom-right'
 	});
 </script>
 </body>
