--- a/index.html
+++ b/index.html
@@ -18,7 +18,65 @@
   </style>
 </head>
 <body>
+<header style="padding:40px; background:#111; color:white; text-align:center;">
+  <h1>Iron Fit Gym</h1>
+  <p>Train harder. Get stronger. Feel better.</p>
+</header>
 
+<section style="padding:40px;">
+  <h2>About Us</h2>
+  <p>
+    Iron Fit Gym is a modern training facility focused on strength, fitness,
+    and community. Whether you are a beginner or an experienced athlete,
+    we have the equipment and support to help you reach your goals.
+  </p>
+</section>
+
+<section style="padding:40px; background:#f4f4f4;">
+  <h2>Memberships</h2>
+  <ul>
+    <li>Basic Membership – Gym access</li>
+    <li>Premium Membership – Classes included</li>
+    <li>Elite Membership – Personal training + classes</li>
+  </ul>
+</section>
+
+<section style="padding:40px;">
+  <h2>Classes</h2>
+  <p>
+    We offer strength training, HIIT, cardio, and group fitness classes
+    throughout the week.
+  </p>
+</section>
+
+<section style="padding:40px; background:#f4f4f4;">
+  <h2>Personal Training</h2>
+  <p>
+    Our certified trainers will build a custom plan based on your goals,
+    schedule, and fitness level.
+  </p>
+</section>
+
+<section style="padding:40px;">
+  <h2>Opening Hours</h2>
+  <p>
+    Monday – Friday: 6am – 10pm<br />
+    Saturday: 8am – 8pm<br />
+    Sunday: 8am – 6pm
+  </p>
+</section>
+
+<section style="padding:40px; background:#f4f4f4;">
+  <h2>Contact Us</h2>
+  <p>
+    Email: info@ironfitgym.com<br />
+    Phone: 01234 567890
+  </p>
+</section>
+
+<footer style="padding:40px; background:#111; color:white; text-align:center;">
+  <p>© 2025 Iron Fit Gym. All rights reserved.</p>
+</footer>
 <header>
   <h1>IronFit Gym</h1>
   <p>Train harder. Get stronger.</p>
