--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat'
 	    mode: 'window',
         position: 'bottom-right'
+	    showLauncher: true
 	});
 </script>
 </body>
