--- a/index.html
+++ b/index.html
@@ -88,15 +88,20 @@
 </section>
 
 <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
-<script type="module">
-	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
-	createChat({
-		webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat'
-	    mode: 'window',
-        position: 'bottom-right'
-	    showLauncher: true
-	});
+<script type="module">
+  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+
+  createChat({
+    webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat',
+
+    mode: 'window',
+    position: 'bottom-right',
+
+    launcher: {
+      enabled: true
+    }
+  });
 </script>
 </body>
 </html>
