--- a/index.html
+++ b/index.html
@@ -103,7 +103,16 @@
     }
   }
 </style>
-
+<style>
+  /* Bigger launcher icon on mobile */
+  @media (max-width: 600px) {
+    .n8n-chat-launcher {
+      transform: scale(1.2);
+      bottom: 20px !important;
+      right: 20px !important;
+    }
+  }
+</style>
 
   
 <script type="module">
