--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <section style="padding:40px;">
   <h2>Opening Hours</h2>
   <p>
-    Monday – Friday: 6am – 10pm<br />
+    Monday – T: 6am – 10pm<br />
     Saturday: 8am – 8pm<br />
     Sunday: 8am – 6pm
   </p>
@@ -87,18 +87,13 @@
   <p>This is a demo gym website.</p>
 </section>
 
-<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" /> 
-
-
-  
+<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
-  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
-  createChat({
-    webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat',
-    mode: 'window',
-    position: 'bottom-right'
-  });
+	createChat({
+		webhookUrl: 'https://quintm.app.n8n.cloud/webhook/0c7cb2b0-bff2-46e7-9bf9-8e42f7e420f2/chat'
+	});
 </script>
 
 
