--- a/reset.html
+++ b/reset.html
@@ -4,7 +4,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Testhjhljserhjstgliadhgpoiadfhgapdhgadkfhasighsp;iFGHA;DSIGHASD;IOGHA;SGHASPDIGHWEPOITHASDL;FNVDPKUTHEDK;LGHPIOUASDHJGJ,BHGEILKJSDGNLFDSKJAGBFFNJVCXDSCEAFGNVCMFZDJSJGDKNJZFJDHSELAHZB,NFDGJRHLEFAIBNCHFJHADFJGBADFL;GHARIOUTHYDFALJKNVAD;IFOGHADORIGHNAD;LKFJGHNAE;RLIGHOEIRHGDLFAVHARIPUHTPIUAREHFIUPADSHGPIUAHGTPIERHGFKUAFHPIUAFGHPUIHUIAHGUAIAHGPIUAHFPIUAHFAWPIUHFAWIPUHGIUEPYRTHAUDFKADSHFKSDHFASKJFHASKFHSALKJFHLKSAJHFLKSJAFHJKSDAHFLKJSADHFLKJSDAHFLSKDJHFLKJSADHFLKJSDAHFLKJSADF</h1>
+  <h1>TEST</h1>
 
   <script type="module">
     import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
