--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
 	createChat({
 		webhookUrl: 'https://quintm.app.n8n.cloud/webhook/db62d570-b1ac-4af1-a689-db4c38edee50/chat'
+			
+		showWelcomeScreen: true,
+        initialMessages: [
+          "👋 Welcome to Physical Culture",
+          "I can help with memberships, class times, pricing, and personal training."
+        ],
+
+        loadPreviousSession: true
 	});
 </script>
 
