--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
   <!-- Mobile chat tweaks -->
   <style>
   :root {
-    /* Chat window */
-    --chat--color-light: #111111;
-    --chat--color-light-shade-50: #161616;
-    --chat--color-light-shade-100: #222222;
+    /* Chat window background */
+    --chat--color-light: #181818;
+    --chat--color-light-shade-50: #1f1f1f;
+    --chat--color-light-shade-100: #2a2a2a;
 
     /* Header */
-    --chat--header--background: #0d0d0d;
+    --chat--header--background: #141414;
     --chat--header--color: #ffffff;
 
     /* Messages */
-    --chat--message--bot--background: #141414;
+    --chat--message--bot--background: #1d1d1d;
     --chat--message--bot--color: #ffffff;
 
-    --chat--message--user--background: #1f1f1f;
+    --chat--message--user--background: #2a2a2a;
     --chat--message--user--color: #ffffff;
 
     /* Toggle button */
     --chat--toggle--size: 64px;
-    --chat--toggle--background: #1a1a1a;
-    --chat--toggle--hover--background: #2a2a2a;
-    --chat--toggle--active--background: #111111;
+    --chat--toggle--background: #2a2a2a;
+    --chat--toggle--hover--background: #3a3a3a;
+    --chat--toggle--active--background: #1f1f1f;
     --chat--toggle--color: #ffffff;
 
     /* Shape */
@@ -40,11 +40,11 @@
   }
 
   .n8n-chat__toggle {
-    box-shadow: 0 12px 30px rgba(0,0,0,0.6);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.55);
   }
 
   .n8n-chat__window {
-    border: 1px solid #222;
+    border: 1px solid #2f2f2f;
   }
 
   @media (max-width: 600px) {
@@ -55,6 +55,7 @@
     }
   }
 </style>
+
 
 </head>
 
