--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --chat--color-light-shade-100: #2a2a2a;
 
     /* Header */
-    --chat--header--background: ##0f0f0f;
+    --chat--header--background: #0f0f0f;
     --chat--header--color: #ffffff;
 
     /* Messages */
