--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* Chat window background */
     --chat--color-light: #181818;
     --chat--color-light-shade-50: #1f1f1f;
-    --chat--color-light-shade-100: #2a2a2a;
+    --chat--color-light-shade-100: #333;
 
     /* Header */
     --chat--header--background: #0f0f0f;
