--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
   <!-- Mobile chat tweaks -->
   <style>
   :root {
-    /* Chat window background */
-    --chat--color-light: #181818;
+    /* Unified background */
+    --chat--color-light: #1f1f1f;
     --chat--color-light-shade-50: #1f1f1f;
-    --chat--color-light-shade-100: #333;
+    --chat--color-light-shade-100: #1f1f1f;
 
     /* Header */
-    --chat--header--background: #0f0f0f;
+    --chat--header--background: #1f1f1f;
     --chat--header--color: #ffffff;
 
     /* Messages */
-    --chat--message--bot--background: #1d1d1d;
+    --chat--message--bot--background: #1f1f1f;
     --chat--message--bot--color: #ffffff;
 
-    --chat--message--user--background: #2a2a2a;
+    --chat--message--user--background: #2e2e2e;
     --chat--message--user--color: #ffffff;
 
     /* Toggle button */
     --chat--toggle--size: 64px;
-    --chat--toggle--background: #2a2a2a;
+    --chat--toggle--background: #2e2e2e;
     --chat--toggle--hover--background: #3a3a3a;
     --chat--toggle--active--background: #1f1f1f;
     --chat--toggle--color: #ffffff;
@@ -39,22 +39,27 @@
     --chat--border-radius: 16px;
   }
 
+  /* Window border */
+  .n8n-chat__window {
+    border: 1px solid #2a2a2a;
+  }
+
+  /* Toggle shadow */
   .n8n-chat__toggle {
     box-shadow: 0 12px 30px rgba(0,0,0,0.55);
   }
 
-  .n8n-chat__window {
-    border: 1px solid #2f2f2f;
-  }
-
+  /* 📱 Mobile */
   @media (max-width: 600px) {
     :root {
       --chat--toggle--size: 72px;
       --chat--window--width: 94vw;
       --chat--window--height: 85vh;
+      --chat--border-radius: 0;
     }
   }
 </style>
+
 
 
 </head>
